// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`QueueList > matches the snapshot 1`] = `
"<div class="column centerAll noMediaMessage">
  <phmusicnotes size="50"></phmusicnotes>
  <p>No tracks found.</p>
</div>"
`;

exports[`QueueList > when tracks prop is not an empty array > matches the snapshot 1`] = `
"<div class="trackTable">
  <div class="trackHeader">
    <div class="trackCell">Track</div>
    <div class="trackCell trackSecondary">Album</div>
    <div class="trackCell trackSecondary">Artists</div>
    <div class="trackCell trackTime">Time</div>
    <div class="trackCell trackOptions"></div>
  </div>
  <div class="trackRow" data-test-id="track">
    <div class="trackCell">
      <div>
        <div class="overlapWrapper trackPlayPause withImage">
          <div class="centerAll preloadImage overlap"><span class="imageLoader"><span class="visuallyHidden">Loading image</span></span><img class="image" src="image" alt="Image" style="display: none;"></div>
          <div class="overlap playPauseWrapper"><button class="centerItems buttonLink centerAll themeHoverButton globalLink buttonLink centerAll themeHoverButton globalLink buttonLink" type="button">
              <phplay class="icon" aria-hidden="true" size="24" weight="regular"></phplay><span class="clamp text visuallyHidden"> Play track </span>
            </button></div>
        </div>
        <div class="trackMeta">
          <div class="marqueeScroll mBXS" inert="" style="--animation-duration: 0ms;">
            <div class="bulletList inner">
              <div class="content">
                <h4>queue-track-0-name</h4>
              </div>
            </div>
          </div>
          <div class="marqueeScroll smallFont mobileOnly mBXS" style="--animation-duration: 0ms;">
            <div class="bulletList inner">
              <div class="content">
                <ul class="bulletList">
                  <li><span class="visuallyHidden">Track album</span><a data-test-id="link" class="link">album</a></li>
                  <!--v-if-->
                  <li><span class="visuallyHidden">Track artists</span>
                    <ul class="commaList">
                      <li data-test-id="artist-list-item"><a class="link" aria-label="Go to artist name">name</a></li>
                      <li data-test-id="artist-list-item"><a class="link" aria-label="Go to artist name1">name1</a></li>
                    </ul>
                  </li>
                  <li><span class="visuallyHidden">Duration</span><time>00:19</time></li>
                </ul>
              </div>
            </div>
          </div>
        </div><button class="centerItems buttonLink" type="button" title="Like track">
          <phheart class="icon" aria-hidden="true" size="24" weight="regular"></phheart><span class="clamp text visuallyHidden">Like track</span>
        </button>
      </div>
    </div>
    <div class="trackCell trackSecondary">
      <div class="marqueeScroll" style="--animation-duration: 0ms;">
        <div class="bulletList inner">
          <div class="content"><a data-test-id="link" class="link">album</a></div>
        </div>
      </div>
    </div>
    <div class="trackCell trackSecondary">
      <div class="marqueeScroll" style="--animation-duration: 0ms;">
        <div class="bulletList inner">
          <div class="content">
            <ul class="commaList">
              <li data-test-id="artist-list-item"><a class="link" aria-label="Go to artist name">name</a></li>
              <li data-test-id="artist-list-item"><a class="link" aria-label="Go to artist name1">name1</a></li>
            </ul>
          </div>
        </div>
      </div>
    </div><time class="trackCell trackTime">00:19</time>
    <div class="trackCell trackOptions"><button class="centerItems buttonLink" type="button" title="Remove item from queue">
        <phx class="icon" aria-hidden="true" size="18" weight="bold"></phx><span class="clamp text visuallyHidden"> Remove item from queue </span>
      </button></div>
  </div>
  <div class="trackRow" data-test-id="track">
    <div class="trackCell">
      <div>
        <div class="overlapWrapper trackPlayPause withImage">
          <div class="centerAll preloadImage overlap"><span class="imageLoader"><span class="visuallyHidden">Loading image</span></span><img class="image" src="image" alt="Image" style="display: none;"></div>
          <div class="overlap playPauseWrapper"><button class="centerItems buttonLink centerAll themeHoverButton globalLink buttonLink centerAll themeHoverButton globalLink buttonLink" type="button">
              <phplay class="icon" aria-hidden="true" size="24" weight="regular"></phplay><span class="clamp text visuallyHidden"> Play track </span>
            </button></div>
        </div>
        <div class="trackMeta">
          <div class="marqueeScroll mBXS" inert="" style="--animation-duration: 0ms;">
            <div class="bulletList inner">
              <div class="content">
                <h4>queue-track-1-name</h4>
              </div>
            </div>
          </div>
          <div class="marqueeScroll smallFont mobileOnly mBXS" style="--animation-duration: 0ms;">
            <div class="bulletList inner">
              <div class="content">
                <ul class="bulletList">
                  <li><span class="visuallyHidden">Track album</span><a data-test-id="link" class="link">album</a></li>
                  <!--v-if-->
                  <li><span class="visuallyHidden">Track artists</span>
                    <ul class="commaList">
                      <li data-test-id="artist-list-item"><a class="link" aria-label="Go to artist name">name</a></li>
                      <li data-test-id="artist-list-item"><a class="link" aria-label="Go to artist name1">name1</a></li>
                    </ul>
                  </li>
                  <li><span class="visuallyHidden">Duration</span><time>00:19</time></li>
                </ul>
              </div>
            </div>
          </div>
        </div><button class="centerItems buttonLink" type="button" title="Like track">
          <phheart class="icon" aria-hidden="true" size="24" weight="regular"></phheart><span class="clamp text visuallyHidden">Like track</span>
        </button>
      </div>
    </div>
    <div class="trackCell trackSecondary">
      <div class="marqueeScroll" style="--animation-duration: 0ms;">
        <div class="bulletList inner">
          <div class="content"><a data-test-id="link" class="link">album</a></div>
        </div>
      </div>
    </div>
    <div class="trackCell trackSecondary">
      <div class="marqueeScroll" style="--animation-duration: 0ms;">
        <div class="bulletList inner">
          <div class="content">
            <ul class="commaList">
              <li data-test-id="artist-list-item"><a class="link" aria-label="Go to artist name">name</a></li>
              <li data-test-id="artist-list-item"><a class="link" aria-label="Go to artist name1">name1</a></li>
            </ul>
          </div>
        </div>
      </div>
    </div><time class="trackCell trackTime">00:19</time>
    <div class="trackCell trackOptions"><button class="centerItems buttonLink" type="button" title="Remove item from queue">
        <phx class="icon" aria-hidden="true" size="18" weight="bold"></phx><span class="clamp text visuallyHidden"> Remove item from queue </span>
      </button></div>
  </div>
  <div class="trackRow" data-test-id="track">
    <div class="trackCell">
      <div>
        <div class="overlapWrapper trackPlayPause withImage">
          <div class="centerAll preloadImage overlap"><span class="imageLoader"><span class="visuallyHidden">Loading image</span></span><img class="image" src="image" alt="Image" style="display: none;"></div>
          <div class="overlap playPauseWrapper"><button class="centerItems buttonLink centerAll themeHoverButton globalLink buttonLink centerAll themeHoverButton globalLink buttonLink" type="button">
              <phplay class="icon" aria-hidden="true" size="24" weight="regular"></phplay><span class="clamp text visuallyHidden"> Play track </span>
            </button></div>
        </div>
        <div class="trackMeta">
          <div class="marqueeScroll mBXS" inert="" style="--animation-duration: 0ms;">
            <div class="bulletList inner">
              <div class="content">
                <h4>queue-track-2-name</h4>
              </div>
            </div>
          </div>
          <div class="marqueeScroll smallFont mobileOnly mBXS" style="--animation-duration: 0ms;">
            <div class="bulletList inner">
              <div class="content">
                <ul class="bulletList">
                  <li><span class="visuallyHidden">Track album</span><a data-test-id="link" class="link">album</a></li>
                  <!--v-if-->
                  <li><span class="visuallyHidden">Track artists</span>
                    <ul class="commaList">
                      <li data-test-id="artist-list-item"><a class="link" aria-label="Go to artist name">name</a></li>
                      <li data-test-id="artist-list-item"><a class="link" aria-label="Go to artist name1">name1</a></li>
                    </ul>
                  </li>
                  <li><span class="visuallyHidden">Duration</span><time>00:19</time></li>
                </ul>
              </div>
            </div>
          </div>
        </div><button class="centerItems buttonLink" type="button" title="Like track">
          <phheart class="icon" aria-hidden="true" size="24" weight="regular"></phheart><span class="clamp text visuallyHidden">Like track</span>
        </button>
      </div>
    </div>
    <div class="trackCell trackSecondary">
      <div class="marqueeScroll" style="--animation-duration: 0ms;">
        <div class="bulletList inner">
          <div class="content"><a data-test-id="link" class="link">album</a></div>
        </div>
      </div>
    </div>
    <div class="trackCell trackSecondary">
      <div class="marqueeScroll" style="--animation-duration: 0ms;">
        <div class="bulletList inner">
          <div class="content">
            <ul class="commaList">
              <li data-test-id="artist-list-item"><a class="link" aria-label="Go to artist name">name</a></li>
              <li data-test-id="artist-list-item"><a class="link" aria-label="Go to artist name1">name1</a></li>
            </ul>
          </div>
        </div>
      </div>
    </div><time class="trackCell trackTime">00:19</time>
    <div class="trackCell trackOptions"><button class="centerItems buttonLink" type="button" title="Remove item from queue">
        <phx class="icon" aria-hidden="true" size="18" weight="bold"></phx><span class="clamp text visuallyHidden"> Remove item from queue </span>
      </button></div>
  </div>
  <div class="trackRow" data-test-id="track">
    <div class="trackCell">
      <div>
        <div class="overlapWrapper trackPlayPause withImage">
          <div class="centerAll preloadImage overlap"><span class="imageLoader"><span class="visuallyHidden">Loading image</span></span><img class="image" src="image" alt="Image" style="display: none;"></div>
          <div class="overlap playPauseWrapper"><button class="centerItems buttonLink centerAll themeHoverButton globalLink buttonLink centerAll themeHoverButton globalLink buttonLink" type="button">
              <phplay class="icon" aria-hidden="true" size="24" weight="regular"></phplay><span class="clamp text visuallyHidden"> Play track </span>
            </button></div>
        </div>
        <div class="trackMeta">
          <div class="marqueeScroll mBXS" inert="" style="--animation-duration: 0ms;">
            <div class="bulletList inner">
              <div class="content">
                <h4>queue-track-3-name</h4>
              </div>
            </div>
          </div>
          <div class="marqueeScroll smallFont mobileOnly mBXS" style="--animation-duration: 0ms;">
            <div class="bulletList inner">
              <div class="content">
                <ul class="bulletList">
                  <li><span class="visuallyHidden">Track album</span><a data-test-id="link" class="link">album</a></li>
                  <!--v-if-->
                  <li><span class="visuallyHidden">Track artists</span>
                    <ul class="commaList">
                      <li data-test-id="artist-list-item"><a class="link" aria-label="Go to artist name">name</a></li>
                      <li data-test-id="artist-list-item"><a class="link" aria-label="Go to artist name1">name1</a></li>
                    </ul>
                  </li>
                  <li><span class="visuallyHidden">Duration</span><time>00:19</time></li>
                </ul>
              </div>
            </div>
          </div>
        </div><button class="centerItems buttonLink" type="button" title="Like track">
          <phheart class="icon" aria-hidden="true" size="24" weight="regular"></phheart><span class="clamp text visuallyHidden">Like track</span>
        </button>
      </div>
    </div>
    <div class="trackCell trackSecondary">
      <div class="marqueeScroll" style="--animation-duration: 0ms;">
        <div class="bulletList inner">
          <div class="content"><a data-test-id="link" class="link">album</a></div>
        </div>
      </div>
    </div>
    <div class="trackCell trackSecondary">
      <div class="marqueeScroll" style="--animation-duration: 0ms;">
        <div class="bulletList inner">
          <div class="content">
            <ul class="commaList">
              <li data-test-id="artist-list-item"><a class="link" aria-label="Go to artist name">name</a></li>
              <li data-test-id="artist-list-item"><a class="link" aria-label="Go to artist name1">name1</a></li>
            </ul>
          </div>
        </div>
      </div>
    </div><time class="trackCell trackTime">00:19</time>
    <div class="trackCell trackOptions"><button class="centerItems buttonLink" type="button" title="Remove item from queue">
        <phx class="icon" aria-hidden="true" size="18" weight="bold"></phx><span class="clamp text visuallyHidden"> Remove item from queue </span>
      </button></div>
  </div>
  <div class="trackRow" data-test-id="track">
    <div class="trackCell">
      <div>
        <div class="overlapWrapper trackPlayPause withImage">
          <div class="centerAll preloadImage overlap"><span class="imageLoader"><span class="visuallyHidden">Loading image</span></span><img class="image" src="image" alt="Image" style="display: none;"></div>
          <div class="overlap playPauseWrapper"><button class="centerItems buttonLink centerAll themeHoverButton globalLink buttonLink centerAll themeHoverButton globalLink buttonLink" type="button">
              <phplay class="icon" aria-hidden="true" size="24" weight="regular"></phplay><span class="clamp text visuallyHidden"> Play track </span>
            </button></div>
        </div>
        <div class="trackMeta">
          <div class="marqueeScroll mBXS" inert="" style="--animation-duration: 0ms;">
            <div class="bulletList inner">
              <div class="content">
                <h4>queue-track-4-name</h4>
              </div>
            </div>
          </div>
          <div class="marqueeScroll smallFont mobileOnly mBXS" style="--animation-duration: 0ms;">
            <div class="bulletList inner">
              <div class="content">
                <ul class="bulletList">
                  <li><span class="visuallyHidden">Track album</span><a data-test-id="link" class="link">album</a></li>
                  <!--v-if-->
                  <li><span class="visuallyHidden">Track artists</span>
                    <ul class="commaList">
                      <li data-test-id="artist-list-item"><a class="link" aria-label="Go to artist name">name</a></li>
                      <li data-test-id="artist-list-item"><a class="link" aria-label="Go to artist name1">name1</a></li>
                    </ul>
                  </li>
                  <li><span class="visuallyHidden">Duration</span><time>00:19</time></li>
                </ul>
              </div>
            </div>
          </div>
        </div><button class="centerItems buttonLink" type="button" title="Like track">
          <phheart class="icon" aria-hidden="true" size="24" weight="regular"></phheart><span class="clamp text visuallyHidden">Like track</span>
        </button>
      </div>
    </div>
    <div class="trackCell trackSecondary">
      <div class="marqueeScroll" style="--animation-duration: 0ms;">
        <div class="bulletList inner">
          <div class="content"><a data-test-id="link" class="link">album</a></div>
        </div>
      </div>
    </div>
    <div class="trackCell trackSecondary">
      <div class="marqueeScroll" style="--animation-duration: 0ms;">
        <div class="bulletList inner">
          <div class="content">
            <ul class="commaList">
              <li data-test-id="artist-list-item"><a class="link" aria-label="Go to artist name">name</a></li>
              <li data-test-id="artist-list-item"><a class="link" aria-label="Go to artist name1">name1</a></li>
            </ul>
          </div>
        </div>
      </div>
    </div><time class="trackCell trackTime">00:19</time>
    <div class="trackCell trackOptions"><button class="centerItems buttonLink" type="button" title="Remove item from queue">
        <phx class="icon" aria-hidden="true" size="18" weight="bold"></phx><span class="clamp text visuallyHidden"> Remove item from queue </span>
      </button></div>
  </div>
</div>"
`;

exports[`QueueList > when tracks prop is not an empty array > when the track does not have a favourite key > matches the snapshot 1`] = `
"<div class="trackTable">
  <div class="trackHeader">
    <div class="trackCell">Track</div>
    <div class="trackCell trackSecondary">Album</div>
    <div class="trackCell trackSecondary">Artists</div>
    <div class="trackCell trackTime">Time</div>
    <div class="trackCell trackOptions"></div>
  </div>
  <div class="trackRow" data-test-id="track">
    <div class="trackCell">
      <div>
        <div class="overlapWrapper trackPlayPause withImage">
          <div class="centerAll preloadImage overlap"><span class="imageLoader"><span class="visuallyHidden">Loading image</span></span><img class="image" src="image" alt="Image" style="display: none;"></div>
          <div class="overlap playPauseWrapper"><button class="centerItems buttonLink centerAll themeHoverButton globalLink buttonLink centerAll themeHoverButton globalLink buttonLink" type="button">
              <phplay class="icon" aria-hidden="true" size="24" weight="regular"></phplay><span class="clamp text visuallyHidden"> Play track </span>
            </button></div>
        </div>
        <div class="trackMeta">
          <div class="marqueeScroll mBXS" inert="" style="--animation-duration: 0ms;">
            <div class="bulletList inner">
              <div class="content">
                <h4>queue-track-0-name</h4>
              </div>
            </div>
          </div>
          <div class="marqueeScroll smallFont mobileOnly mBXS" style="--animation-duration: 0ms;">
            <div class="bulletList inner">
              <div class="content">
                <ul class="bulletList">
                  <li><span class="visuallyHidden">Track album</span><a data-test-id="link" class="link">album</a></li>
                  <!--v-if-->
                  <li><span class="visuallyHidden">Track artists</span>
                    <ul class="commaList">
                      <li data-test-id="artist-list-item"><a class="link" aria-label="Go to artist name">name</a></li>
                      <li data-test-id="artist-list-item"><a class="link" aria-label="Go to artist name1">name1</a></li>
                    </ul>
                  </li>
                  <li><span class="visuallyHidden">Duration</span><time>00:19</time></li>
                </ul>
              </div>
            </div>
          </div>
        </div>
        <!--v-if-->
      </div>
    </div>
    <div class="trackCell trackSecondary">
      <div class="marqueeScroll" style="--animation-duration: 0ms;">
        <div class="bulletList inner">
          <div class="content"><a data-test-id="link" class="link">album</a></div>
        </div>
      </div>
    </div>
    <div class="trackCell trackSecondary">
      <div class="marqueeScroll" style="--animation-duration: 0ms;">
        <div class="bulletList inner">
          <div class="content">
            <ul class="commaList">
              <li data-test-id="artist-list-item"><a class="link" aria-label="Go to artist name">name</a></li>
              <li data-test-id="artist-list-item"><a class="link" aria-label="Go to artist name1">name1</a></li>
            </ul>
          </div>
        </div>
      </div>
    </div><time class="trackCell trackTime">00:19</time>
    <div class="trackCell trackOptions"><button class="centerItems buttonLink" type="button" title="Remove item from queue">
        <phx class="icon" aria-hidden="true" size="18" weight="bold"></phx><span class="clamp text visuallyHidden"> Remove item from queue </span>
      </button></div>
  </div>
</div>"
`;

exports[`QueueList > when tracks prop is not an empty array > when the track does not have an album key > matches the snapshot 1`] = `
"<div class="trackTable">
  <div class="trackHeader">
    <div class="trackCell">Track</div>
    <div class="trackCell trackSecondary">Album</div>
    <div class="trackCell trackSecondary">Artists</div>
    <div class="trackCell trackTime">Time</div>
    <div class="trackCell trackOptions"></div>
  </div>
  <div class="trackRow" data-test-id="track">
    <div class="trackCell">
      <div>
        <div class="overlapWrapper trackPlayPause withImage">
          <div class="centerAll preloadImage overlap"><span class="imageLoader"><span class="visuallyHidden">Loading image</span></span><img class="image" src="image" alt="Image" style="display: none;"></div>
          <div class="overlap playPauseWrapper"><button class="centerItems buttonLink centerAll themeHoverButton globalLink buttonLink centerAll themeHoverButton globalLink buttonLink" type="button">
              <phplay class="icon" aria-hidden="true" size="24" weight="regular"></phplay><span class="clamp text visuallyHidden"> Play track </span>
            </button></div>
        </div>
        <div class="trackMeta">
          <div class="marqueeScroll mBXS" inert="" style="--animation-duration: 0ms;">
            <div class="bulletList inner">
              <div class="content">
                <h4>queue-track-0-name</h4>
              </div>
            </div>
          </div>
          <div class="marqueeScroll smallFont mobileOnly mBXS" style="--animation-duration: 0ms;">
            <div class="bulletList inner">
              <div class="content">
                <ul class="bulletList">
                  <!--v-if-->
                  <!--v-if-->
                  <li><span class="visuallyHidden">Track artists</span>
                    <ul class="commaList">
                      <li data-test-id="artist-list-item"><a class="link" aria-label="Go to artist name">name</a></li>
                      <li data-test-id="artist-list-item"><a class="link" aria-label="Go to artist name1">name1</a></li>
                    </ul>
                  </li>
                  <li><span class="visuallyHidden">Duration</span><time>00:19</time></li>
                </ul>
              </div>
            </div>
          </div>
        </div><button class="centerItems buttonLink" type="button" title="Like track">
          <phheart class="icon" aria-hidden="true" size="24" weight="regular"></phheart><span class="clamp text visuallyHidden">Like track</span>
        </button>
      </div>
    </div>
    <div class="trackCell trackSecondary">
      <p>--</p>
    </div>
    <div class="trackCell trackSecondary">
      <div class="marqueeScroll" style="--animation-duration: 0ms;">
        <div class="bulletList inner">
          <div class="content">
            <ul class="commaList">
              <li data-test-id="artist-list-item"><a class="link" aria-label="Go to artist name">name</a></li>
              <li data-test-id="artist-list-item"><a class="link" aria-label="Go to artist name1">name1</a></li>
            </ul>
          </div>
        </div>
      </div>
    </div><time class="trackCell trackTime">00:19</time>
    <div class="trackCell trackOptions"><button class="centerItems buttonLink" type="button" title="Remove item from queue">
        <phx class="icon" aria-hidden="true" size="18" weight="bold"></phx><span class="clamp text visuallyHidden"> Remove item from queue </span>
      </button></div>
  </div>
</div>"
`;

exports[`QueueList > when tracks prop is not an empty array > when the track does not have an artists key > matches the snapshot 1`] = `
"<div class="trackTable">
  <div class="trackHeader">
    <div class="trackCell">Track</div>
    <div class="trackCell trackSecondary">Album</div>
    <div class="trackCell trackSecondary">Artists</div>
    <div class="trackCell trackTime">Time</div>
    <div class="trackCell trackOptions"></div>
  </div>
  <div class="trackRow" data-test-id="track">
    <div class="trackCell">
      <div>
        <div class="overlapWrapper trackPlayPause withImage">
          <div class="centerAll preloadImage overlap"><span class="imageLoader"><span class="visuallyHidden">Loading image</span></span><img class="image" src="image" alt="Image" style="display: none;"></div>
          <div class="overlap playPauseWrapper"><button class="centerItems buttonLink centerAll themeHoverButton globalLink buttonLink centerAll themeHoverButton globalLink buttonLink" type="button">
              <phplay class="icon" aria-hidden="true" size="24" weight="regular"></phplay><span class="clamp text visuallyHidden"> Play track </span>
            </button></div>
        </div>
        <div class="trackMeta">
          <div class="marqueeScroll mBXS" inert="" style="--animation-duration: 0ms;">
            <div class="bulletList inner">
              <div class="content">
                <h4>queue-track-0-name</h4>
              </div>
            </div>
          </div>
          <div class="marqueeScroll smallFont mobileOnly mBXS" style="--animation-duration: 0ms;">
            <div class="bulletList inner">
              <div class="content">
                <ul class="bulletList">
                  <li><span class="visuallyHidden">Track album</span><a data-test-id="link" class="link">album</a></li>
                  <!--v-if-->
                  <!--v-if-->
                  <li><span class="visuallyHidden">Duration</span><time>00:19</time></li>
                </ul>
              </div>
            </div>
          </div>
        </div><button class="centerItems buttonLink" type="button" title="Like track">
          <phheart class="icon" aria-hidden="true" size="24" weight="regular"></phheart><span class="clamp text visuallyHidden">Like track</span>
        </button>
      </div>
    </div>
    <div class="trackCell trackSecondary">
      <div class="marqueeScroll" style="--animation-duration: 0ms;">
        <div class="bulletList inner">
          <div class="content"><a data-test-id="link" class="link">album</a></div>
        </div>
      </div>
    </div>
    <div class="trackCell trackSecondary">
      <p>--</p>
    </div><time class="trackCell trackTime">00:19</time>
    <div class="trackCell trackOptions"><button class="centerItems buttonLink" type="button" title="Remove item from queue">
        <phx class="icon" aria-hidden="true" size="18" weight="bold"></phx><span class="clamp text visuallyHidden"> Remove item from queue </span>
      </button></div>
  </div>
</div>"
`;

exports[`QueueList > when tracks prop is not an empty array > when track.album is undefined > matches the snapshot 1`] = `
"<div class="trackTable">
  <div class="trackHeader">
    <div class="trackCell">Track</div>
    <div class="trackCell trackSecondary">Album</div>
    <div class="trackCell trackSecondary">Artists</div>
    <div class="trackCell trackTime">Time</div>
    <div class="trackCell trackOptions"></div>
  </div>
  <div class="trackRow" data-test-id="track">
    <div class="trackCell">
      <div>
        <div class="overlapWrapper trackPlayPause withImage">
          <div class="centerAll preloadImage overlap"><span class="imageLoader"><span class="visuallyHidden">Loading image</span></span><img class="image" src="image" alt="Image" style="display: none;"></div>
          <div class="overlap playPauseWrapper"><button class="centerItems buttonLink centerAll themeHoverButton globalLink buttonLink centerAll themeHoverButton globalLink buttonLink" type="button">
              <phplay class="icon" aria-hidden="true" size="24" weight="regular"></phplay><span class="clamp text visuallyHidden"> Play track </span>
            </button></div>
        </div>
        <div class="trackMeta">
          <div class="marqueeScroll mBXS" inert="" style="--animation-duration: 0ms;">
            <div class="bulletList inner">
              <div class="content">
                <h4>queue-track-0-name</h4>
              </div>
            </div>
          </div>
          <div class="marqueeScroll smallFont mobileOnly mBXS" style="--animation-duration: 0ms;">
            <div class="bulletList inner">
              <div class="content">
                <ul class="bulletList">
                  <!--v-if-->
                  <!--v-if-->
                  <li><span class="visuallyHidden">Track artists</span>
                    <ul class="commaList">
                      <li data-test-id="artist-list-item"><a class="link" aria-label="Go to artist name">name</a></li>
                      <li data-test-id="artist-list-item"><a class="link" aria-label="Go to artist name1">name1</a></li>
                    </ul>
                  </li>
                  <li><span class="visuallyHidden">Duration</span><time>00:19</time></li>
                </ul>
              </div>
            </div>
          </div>
        </div><button class="centerItems buttonLink" type="button" title="Like track">
          <phheart class="icon" aria-hidden="true" size="24" weight="regular"></phheart><span class="clamp text visuallyHidden">Like track</span>
        </button>
      </div>
    </div>
    <div class="trackCell trackSecondary">
      <p>--</p>
    </div>
    <div class="trackCell trackSecondary">
      <div class="marqueeScroll" style="--animation-duration: 0ms;">
        <div class="bulletList inner">
          <div class="content">
            <ul class="commaList">
              <li data-test-id="artist-list-item"><a class="link" aria-label="Go to artist name">name</a></li>
              <li data-test-id="artist-list-item"><a class="link" aria-label="Go to artist name1">name1</a></li>
            </ul>
          </div>
        </div>
      </div>
    </div><time class="trackCell trackTime">00:19</time>
    <div class="trackCell trackOptions"><button class="centerItems buttonLink" type="button" title="Remove item from queue">
        <phx class="icon" aria-hidden="true" size="18" weight="bold"></phx><span class="clamp text visuallyHidden"> Remove item from queue </span>
      </button></div>
  </div>
</div>"
`;

exports[`QueueList > when tracks prop is not an empty array > when track.artists is an empty array > matches the snapshot 1`] = `
"<div class="trackTable">
  <div class="trackHeader">
    <div class="trackCell">Track</div>
    <div class="trackCell trackSecondary">Album</div>
    <div class="trackCell trackSecondary">Artists</div>
    <div class="trackCell trackTime">Time</div>
    <div class="trackCell trackOptions"></div>
  </div>
  <div class="trackRow" data-test-id="track">
    <div class="trackCell">
      <div>
        <div class="overlapWrapper trackPlayPause withImage">
          <div class="centerAll preloadImage overlap"><span class="imageLoader"><span class="visuallyHidden">Loading image</span></span><img class="image" src="image" alt="Image" style="display: none;"></div>
          <div class="overlap playPauseWrapper"><button class="centerItems buttonLink centerAll themeHoverButton globalLink buttonLink centerAll themeHoverButton globalLink buttonLink" type="button">
              <phplay class="icon" aria-hidden="true" size="24" weight="regular"></phplay><span class="clamp text visuallyHidden"> Play track </span>
            </button></div>
        </div>
        <div class="trackMeta">
          <div class="marqueeScroll mBXS" inert="" style="--animation-duration: 0ms;">
            <div class="bulletList inner">
              <div class="content">
                <h4>queue-track-0-name</h4>
              </div>
            </div>
          </div>
          <div class="marqueeScroll smallFont mobileOnly mBXS" style="--animation-duration: 0ms;">
            <div class="bulletList inner">
              <div class="content">
                <ul class="bulletList">
                  <li><span class="visuallyHidden">Track album</span><a data-test-id="link" class="link">album</a></li>
                  <!--v-if-->
                  <!--v-if-->
                  <li><span class="visuallyHidden">Duration</span><time>00:19</time></li>
                </ul>
              </div>
            </div>
          </div>
        </div><button class="centerItems buttonLink" type="button" title="Like track">
          <phheart class="icon" aria-hidden="true" size="24" weight="regular"></phheart><span class="clamp text visuallyHidden">Like track</span>
        </button>
      </div>
    </div>
    <div class="trackCell trackSecondary">
      <div class="marqueeScroll" style="--animation-duration: 0ms;">
        <div class="bulletList inner">
          <div class="content"><a data-test-id="link" class="link">album</a></div>
        </div>
      </div>
    </div>
    <div class="trackCell trackSecondary">
      <p>--</p>
    </div><time class="trackCell trackTime">00:19</time>
    <div class="trackCell trackOptions"><button class="centerItems buttonLink" type="button" title="Remove item from queue">
        <phx class="icon" aria-hidden="true" size="18" weight="bold"></phx><span class="clamp text visuallyHidden"> Remove item from queue </span>
      </button></div>
  </div>
</div>"
`;
